<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/iv_detail_image"
    android:orientation="horizontal"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/image_by" />

        <TextView
            android:id="@+id/tv_image_by_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:textStyle="bold"
            tools:text="nicholaskampouris" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/image_by_on" />

        <TextView
            android:id="@+id/tv_image_by_onsplash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/image_by_onsplash"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageView
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_gravity="end"
        android:contentDescription="@string/likes_content_description"
        android:src="@drawable/ic_likes" />

    <TextView
        android:id="@+id/tv_image_likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="4dp"
        android:textSize="16sp"
        tools:text="12" />

</LinearLayout>