<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/layout_image_details_1"
    android:layout_margin="8dp"
    app:cardCornerRadius="@dimen/cardview_default_radius"
    app:cardElevation="@dimen/cardview_default_elevation"
    app:cardUseCompatPadding="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_details_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/details_title"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_created_key"
            style="@style/TextViewDetailKey"
            android:text="@string/created_key"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_details_title" />

        <TextView
            android:id="@+id/tv_created_value"
            style="@style/TextViewDetailValue"
            app:layout_constraintLeft_toRightOf="@+id/tv_created_key"
            app:layout_constraintTop_toTopOf="@+id/tv_created_key"
            tools:text="20 September 2016" />

        <TextView
            android:id="@+id/tv_width_key"
            style="@style/TextViewDetailKey"
            android:text="@string/width_key"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_created_key" />

        <TextView
            android:id="@+id/tv_width_value"
            style="@style/TextViewDetailValue"
            app:layout_constraintLeft_toRightOf="@+id/tv_width_key"
            app:layout_constraintTop_toTopOf="@+id/tv_width_key"
            tools:text="340" />

        <TextView
            android:id="@+id/tv_height_key"
            style="@style/TextViewDetailKey"
            android:text="@string/height_key"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_width_key" />

        <TextView
            android:id="@+id/tv_height_value"
            style="@style/TextViewDetailValue"
            app:layout_constraintLeft_toRightOf="@+id/tv_height_key"
            app:layout_constraintTop_toTopOf="@+id/tv_height_key"
            tools:text="340" />

        <TextView
            android:id="@+id/tv_categories_key"
            style="@style/TextViewDetailKey"
            android:text="@string/categories_key"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_height_key" />

        <TextView
            android:id="@+id/tv_categories_value"
            style="@style/TextViewDetailValue"
            app:layout_constraintLeft_toRightOf="@+id/tv_categories_key"
            app:layout_constraintTop_toTopOf="@+id/tv_categories_key"
            tools:text="Nature" />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>